samples/_failures_safe/1761201953_148e05_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7f32882.c: In function ‘print_state’:
./samples/SAFE/__tmp_a7f32882.c:138:5: error: expected declaration or statement at end of input
  138 |     };
      |     ^
